
        CHANGES IN spatstat.explore VERSION 3.7-0.002

OVERVIEW

    o We thank Meri Bilan for contributions.
    
    o Important change to default in pcf

SIGNIFICANT USER-VISIBLE CHANGES

    o pcf.ppp
    Default value of 'zerocor' changed to 'convolution'.

        CHANGES IN spatstat.explore VERSION 3.7-0

OVERVIEW

    o Important changes to mark correlation function.

    o Summary functions have argument 'rmax'.
    
    o Minor internal improvements.

SIGNIFICANT USER-VISIBLE CHANGES

    o markcorr
    The interpretation of the argument 'weights' has changed.

    o markcorr
    New argument 'fadjust' (equivalent to the old 'weights').

    o markcrosscorr
    New argument 'weights'.

    o plot.fasp
    Now returns a list containing the results of plot.fv for each panel.

    o summary functions
    The following functions have a new formal argument 'rmax':
    Fest, Finhom, FmultiInhom,
    Gcross, Gdot, Gest, Ginhom, Gmulti, GmultiInhom,
    Jest, Jcross, Jdot, Jinhom, Jmulti,
    Kcross, Kdot, Kinhom, Kmulti,
    Kcross.inhom, Kdot.inhom, Kmulti.inhom, Kmark, Ksector,
    markconnect, markcorr, markcorrint, markcrosscorr, markequal, markvario,
    pcf.ppp, pcfcross, pcfdot, pcfmulti,
    pcfinhom, pcfcross.inhom, pcfdot.inhom, pcfmulti.inhom.

BUG FIXES

    o plot.fv
    Crashed sometimes if the formula involved the name of
    an object that was not a column of x.
    Fixed.
    
        CHANGES IN spatstat.explore VERSION 3.6-0

OVERVIEW

    o We thank Lucia Cobo Sanchez and Tilman Davies for contributions.

    o Nearest neighbour counting functions.

    o Tolerance contours for relative risk.

    o Minor improvements and bug fixes.

NEW FUNCTIONS

    o markequal
    Mark equality function e(r) for multitype point patterns.
    
    o nnequal, nncount
    Summary functions for multitype point patterns
    based on the types of nearest neighbours.

    o tolcon
    Tolerance contours for spatial relative risk.
