@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.7-0.002
-Date: 2026-02-03
+Version: 3.7-0.003
+Date: 2026-02-08
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
