@@ -19,4 +19,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2025-09-22" "3.5-3" 242 565 0 34506 6364
 "2025-11-22" "3.6-0" 246 574 0 34848 6364
 "2026-01-22" "3.7-0" 246 575 0 34944 6364
-"2026-02-03" "3.7-0.002" 246 575 0 34946 6364
+"2026-02-08" "3.7-0.003" 246 575 0 34975 6364
